# grid_reader

./: .gitignore  pyproject.toml
src/reader/: GRID_A_QuickProcess.py  __init__.py  log.py  parity_check.py  parse_grid_data.py  types.py  utils.py
src/reader/frame/: grid_packet_1.xml  grid_packet_11B.xml  grid_packet_2.xml  grid_packet_3.xml
tests/: test_11B.py  test_A.py
