[project]
name = "reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wqd23", email = "wqd23@mails.tsinghua.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "crcmod>=1.7",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "pandas>=2.2.3",
]

[project.scripts]
reader = "reader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
